[gd_scene load_steps=8 format=2]

[ext_resource path="res://Enemy/Zomby.gd" type="Script" id=1]
[ext_resource path="res://Assets/Characters/Zombie/Zombie.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 6 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3, 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 3, 1 )

[sub_resource type="Animation" id=4]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6 ]
}

[node name="Zomby" type="KinematicBody2D" groups=[
"Enemy",
]]
collision_layer = 4
script = ExtResource( 1 )
speed = 40.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -6 )
shape = SubResource( 1 )

[node name="Body" type="Node2D" parent="."]

[node name="Attack" type="Area2D" parent="Body"]
position = Vector2( 1, 2 )
collision_layer = 0
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/Attack"]
position = Vector2( 2, -6 )
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="Body"]
position = Vector2( 5, 0 )
enabled = true
cast_to = Vector2( 0, 5 )

[node name="Sprite" type="Sprite" parent="Body"]
position = Vector2( 0, -8 )
texture = ExtResource( 2 )
hframes = 7

[node name="Damage" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="Damage"]
position = Vector2( 0, -12 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Idle = SubResource( 4 )
anims/Walk = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="JumpBuffer" type="Timer" parent="."]
wait_time = 0.17
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
[connection signal="body_entered" from="Body/Attack" to="." method="Attack_body_entered"]
[connection signal="body_entered" from="Damage" to="." method="Damage_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
